# libawl

./: .gitignore  CMakeLists.txt  FindAWL.cmake  awl-config.cmake.in  config.hpp.in  display_window.cpp
CMakeModules/: AwlMainGenerator.cmake  FindAWL.cmake  FindAwl.cmake  FindFcppt.cmake  FindWine.cmake
examples/: CMakeLists.txt  asio.cpp  main.cpp  resize.cpp  show.cpp
include/awl/: class_symbol.hpp  create_log.hpp  create_window_system.hpp  exception.hpp  log.hpp  log_context.hpp  log_location.hpp  show_error.hpp  show_error_narrow.hpp  show_message.hpp  show_message_narrow.hpp  symbol.hpp
include/awl/backends/cocoa/: from_fcppt_string.hpp
include/awl/backends/quartz/: event_manager.hpp  event_manager_fwd.hpp  window_ref.hpp
include/awl/backends/windows/: callback_return_type.hpp  choose_and_set_pixel_format.hpp  combine_result.hpp  counted_wndclass.hpp  counted_wndclass_fwd.hpp  create_window.hpp  default_wnd_proc.hpp  event_callback.hpp  event_function.hpp  event_processor.hpp  event_processor_fwd.hpp  event_return_type.hpp  event_type.hpp  event_wnd_proc.hpp  format_message.hpp  gdi_device.hpp  gdi_device_fwd.hpp  get_focus.hpp  local_free.hpp  message_box.hpp  message_box_narrow.hpp  module_handle.hpp  optional_point.hpp  optional_point_fwd.hpp  optional_rect.hpp  optional_rect_fwd.hpp  optional_renderer_parameters.hpp  original_event_processor.hpp  original_window_instance.hpp  post_message.hpp  scoped_local_memory.hpp  system_metrics.hpp  window_fwd.hpp  window_instance.hpp  window_instance_fwd.hpp  window_instance_ptr.hpp  window_ptr.hpp  window_system.hpp  windows.hpp  wndclass.hpp  (+4 more)
include/awl/backends/x11/: asio_dispatcher.hpp  atom.hpp  change_event_mask.hpp  event.hpp  (+43 more)
include/awl/cursor/: const_optional_object_ref.hpp  const_optional_object_ref_fwd.hpp  create_invisible.hpp  create_predefined.hpp  hotspot.hpp  hotspot_fwd.hpp  object.hpp  object_fwd.hpp  object_scoped_ptr.hpp  object_unique_ptr.hpp  predefined.hpp  predefined_fwd.hpp  size.hpp
include/awl/event/: create_processor.hpp  processor.hpp  processor_fwd.hpp  processor_ptr.hpp  processor_scoped_ptr.hpp  processor_shared_ptr.hpp  processor_unique_ptr.hpp  resize.hpp  resize_callback.hpp  resize_function.hpp  resize_fwd.hpp  scoped_window_processor.hpp  scoped_window_processor_fwd.hpp
include/awl/main/: create_output.hpp  dummy_output.hpp  exit_code.hpp  exit_failure.hpp  exit_success.hpp  function_context.hpp  function_context_fwd.hpp  optional_show_command.hpp  output.hpp  output_fwd.hpp  output_unique_ptr.hpp  scoped_output.hpp  scoped_output_fwd.hpp  scoped_output_scoped_ptr.hpp  scoped_output_unique_ptr.hpp  show_command.hpp
include/awl/mainloop/: dispatcher.hpp  dispatcher_callback.hpp  dispatcher_fwd.hpp  dispatcher_ptr.hpp  dispatcher_scoped_ptr.hpp  dispatcher_unique_ptr.hpp  io_service.hpp  io_service_fwd.hpp  io_service_ptr.hpp  io_service_scoped_ptr.hpp  io_service_shared_ptr.hpp  io_service_unique_ptr.hpp  native_handle.hpp  nullary_callback.hpp  optional_io_service_ref.hpp
include/awl/system/: create.hpp  object.hpp  object_fwd.hpp  object_ptr.hpp  object_scoped_ptr.hpp  object_shared_ptr.hpp  object_unique_ptr.hpp  optional_exit_code.hpp  optional_exit_code_fwd.hpp
include/awl/visual/: object.hpp  object_fwd.hpp  object_scoped_ptr.hpp  object_unique_ptr.hpp
include/awl/window/: bit_depth.hpp  create_system.hpp  depth_buffer.hpp  dim.hpp  dim_fwd.hpp  has_focus.hpp  instance.hpp  instance_fwd.hpp  instance_ptr.hpp  instance_scoped_ptr.hpp  instance_shared_ptr.hpp  instance_unique_ptr.hpp  object.hpp  object_fwd.hpp  object_scoped_ptr.hpp  object_shared_ptr.hpp  object_unique_ptr.hpp  optional_dim.hpp  optional_dim_fwd.hpp  optional_pos.hpp  optional_pos_fwd.hpp  optional_position.hpp  optional_position_fwd.hpp  parameters.hpp  parameters_fwd.hpp  pos.hpp  pos_fwd.hpp  rect.hpp  rect_fwd.hpp  scalar.hpp  size.hpp  stencil_buffer.hpp  system.hpp  system_fwd.hpp  system_ptr.hpp  unit.hpp  vector.hpp  vector_fwd.hpp
src/: create_log.cpp  create_window_system.cpp  exception.cpp  log.cpp  log_context.cpp  log_location.cpp  show_error.cpp  show_error_narrow.cpp  show_message.cpp  show_message_narrow.cpp
src/backends/cocoa/: from_fcppt_string.mm
src/backends/quartz/: event_manager.mm
src/backends/windows/: choose_and_set_pixel_format.cpp  combine_result.cpp  counted_wndclass.cpp  create_window.cpp  default_wnd_proc.cpp  event_processor.cpp  event_wnd_proc.cpp  format_message.cpp  gdi_device.cpp  get_focus.cpp  local_free.cpp  message_box.cpp  message_box_narrow.cpp  module_handle.cpp  original_event_processor.cpp  original_window_instance.cpp  post_message.cpp  scoped_local_memory.cpp  system_metrics.cpp  window.cpp  window_instance.cpp  window_system.cpp  wndclass.cpp  wndclass_pool.cpp
src/backends/x11/: asio_dispatcher.cpp  class_hint.cpp  colormap.cpp  create_visual_info.cpp  default_screen.cpp  default_visual.cpp  display.cpp  display_fd.cpp  event_processor.cpp  free.cpp  get_input_focus.cpp  intern_atom.cpp  log.cpp  original_display.cpp  original_event_processor.cpp  original_window_instance.cpp  size_hints.cpp  to_event_mask.cpp  to_x11_bool.cpp  visual.cpp  window_instance.cpp  window_system.cpp  wm_hints.cpp  wrapped_visual.cpp
src/cursor/: create_invisible.cpp  create_predefined.cpp  object.cpp
src/event/: create_processor.cpp  processor.cpp  resize.cpp  scoped_window_processor.cpp
src/main/: create_output.cpp  dummy_output.cpp  exit_failure.cpp  exit_success.cpp  function_context.cpp  output.cpp  scoped_output.cpp
src/mainloop/: dispatcher.cpp  io_service.cpp
src/mainloop/asio/: create_io_service.cpp  create_io_service_base.cpp  dispatcher.cpp  io_service.cpp  original_io_service.cpp
src/system/: create.cpp  object.cpp
src/system/event/: create_processor.cpp  processor.cpp  quit.cpp
src/visual/: object.cpp
src/window/: create_system.cpp  has_focus.cpp  instance.cpp  object.cpp  parameters.cpp  system.cpp
src/window/event/: close.cpp  create_processor.cpp  destroy.cpp  processor.cpp  resize.cpp
util/: prettify_includes.sh  update_cmake.sh
(+555 files in other folders)
